; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..inputdrivers_joypadlinuxraw_joypad.c_linuxraw_joypad_axis.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..inputdrivers_joypadlinuxraw_joypad.c_linuxraw_joypad_axis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linuxraw_joypad = type { i64* }

@AXIS_NONE = common dso_local global i64 0, align 8
@linuxraw_pads = common dso_local global i32* null, align 8
@NUM_AXES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i64)* @linuxraw_joypad_axis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @linuxraw_joypad_axis(i32 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.linuxraw_joypad*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 0, i64* %6, align 8
  store %struct.linuxraw_joypad* null, %struct.linuxraw_joypad** %7, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @AXIS_NONE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i64 0, i64* %3, align 8
  br label %54

12:                                               ; preds = %2
  %13 = load i32*, i32** @linuxraw_pads, align 8
  %14 = load i32, i32* %4, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = bitcast i32* %16 to %struct.linuxraw_joypad*
  store %struct.linuxraw_joypad* %17, %struct.linuxraw_joypad** %7, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i64 @AXIS_NEG_GET(i64 %18)
  %20 = load i64, i64* @NUM_AXES, align 8
  %21 = icmp ult i64 %19, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %12
  %23 = load %struct.linuxraw_joypad*, %struct.linuxraw_joypad** %7, align 8
  %24 = getelementptr inbounds %struct.linuxraw_joypad, %struct.linuxraw_joypad* %23, i32 0, i32 0
  %25 = load i64*, i64** %24, align 8
  %26 = load i64, i64* %5, align 8
  %27 = call i64 @AXIS_NEG_GET(i64 %26)
  %28 = getelementptr inbounds i64, i64* %25, i64 %27
  %29 = load i64, i64* %28, align 8
  store i64 %29, i64* %6, align 8
  %30 = load i64, i64* %6, align 8
  %31 = icmp sgt i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %22
  store i64 0, i64* %6, align 8
  br label %33

33:                                               ; preds = %32, %22
  br label %52

34:                                               ; preds = %12
  %35 = load i64, i64* %5, align 8
  %36 = call i64 @AXIS_POS_GET(i64 %35)
  %37 = load i64, i64* @NUM_AXES, align 8
  %38 = icmp ult i64 %36, %37
  br i1 %38, label %39, label %51

39:                                               ; preds = %34
  %40 = load %struct.linuxraw_joypad*, %struct.linuxraw_joypad** %7, align 8
  %41 = getelementptr inbounds %struct.linuxraw_joypad, %struct.linuxraw_joypad* %40, i32 0, i32 0
  %42 = load i64*, i64** %41, align 8
  %43 = load i64, i64* %5, align 8
  %44 = call i64 @AXIS_POS_GET(i64 %43)
  %45 = getelementptr inbounds i64, i64* %42, i64 %44
  %46 = load i64, i64* %45, align 8
  store i64 %46, i64* %6, align 8
  %47 = load i64, i64* %6, align 8
  %48 = icmp slt i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %39
  store i64 0, i64* %6, align 8
  br label %50

50:                                               ; preds = %49, %39
  br label %51

51:                                               ; preds = %50, %34
  br label %52

52:                                               ; preds = %51, %33
  %53 = load i64, i64* %6, align 8
  store i64 %53, i64* %3, align 8
  br label %54

54:                                               ; preds = %52, %11
  %55 = load i64, i64* %3, align 8
  ret i64 %55
}

declare dso_local i64 @AXIS_NEG_GET(i64) #1

declare dso_local i64 @AXIS_POS_GET(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
